# synthetic-creator-studio

./: .gitignore  404.html  CONSTRAINTS.md  README.md  docker-compose.yml  index.html  index.txt  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  constraints.py  db.py  demo_seed.py  main.py
backend/app/analytics/: __init__.py  service.py
backend/app/api/: analytics.py  assets.py  deps.py  distribution.py  entities.py  generation.py  lora.py  personas.py  strategy.py  training.py
backend/app/generation/: qc.py  (+11 more)
backend/migrations/: env.py  script.py.mako
backend/tests/: conftest.py  test_analytics.py  test_api.py  test_api_listing.py  test_c2pa_provenance.py  test_demo_seed.py  test_disclosure_gate.py  test_generation_provenance_integration.py  test_generation_provider_factory.py  test_krea_provider.py  test_krea_trainer.py  test_lora_training.py  test_meta_adapter.py  test_persona_requires_synthetic_identity.py  test_publish_fails_closed.py  test_real_person_guard.py  test_tiktok_adapter.py  test_training.py
backend/workers/: celery_app.py  tasks.py
ioscan/: .gitignore  CLAUDE.md  Check-My-iPhone.bat  Check-My-iPhone.command  README.md  pyproject.toml
ioscan/ioscan/: __init__.py  cli.py  console.py  gui.py  models.py  mvt_engine.py  scanner.py  timeutil.py
ioscan/scripts/: fetch_iocs.py
ioscan/tests/: factories.py  test_backup.py  test_end_to_end.py  test_extractors.py  test_gui.py  test_heuristics.py  test_iocs.py  test_mvt_engine.py  test_sysdiagnose.py
(+454 files in other folders)
