[project]
name = "synthetic-creator-studio-backend"
version = "0.1.0"
description = "Transparency-first studio for disclosed AI personas"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"
